# Markdownify

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: gallery.md  quickstart.py
examples/data/markdown/: ASCII_art.md  Captcha_Recognition_modelwahle.md  ChartQA.md  DVQA.md  DoTA.md  DocVQA.md  FOX.md  HME100K.md  HOST.md  IC13_857.md  IC15_1811.md  IIIT5K.md  InfoQA.md  M2E.md  MLHME_38K.md  MMTab.md  MathMatics.md  MathVerse.md  MathVision.md  MathVista.md  MathWriting.md  Math_Expression_Recognition.md  Math_QA.md  Mini-CASIA-CSDB.md  NonSemanticText.md  ORAND.md  PlotQA.md  RICO.md  Text_counting_IC13.md  Text_counting_SVT.md  Text_counting_hiertext.md  Text_counting_totaltext.md  WOST.md  WordArt.md  app.md  chart_parsing.md  chart_parsing_en_OneChart.md  cocotext.md  ct80.md  ctw.md  (+38 more)
scripts/: add_header.py
src/llm_markdownify/: __init__.py  api.py  cli.py  config.py  grouping.py  llm.py  logging.py  markdownifier.py  pager.py  prompt_profiles.py  prompts.py
tests/: __init__.py  test_cli.py  test_grouping.py
