# Copyright (c) 2025 Sethu Pavan Venkata Reddy Pastula
# Licensed under the Apache License, Version 2.0. See LICENSE file for details.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "llm-markdownify"
version = "0.1.0"
description = "Convert documents (PDF, DOCX) to high-quality Markdown using Vision LLMs via LiteLLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Sethu Pavan Venkata Reddy Pastula" }
]
keywords = ["markdown", "pdf", "docx", "llm", "vision", "ocr", "litellm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Markup",
  "Topic :: Utilities",
]
dependencies = [
  "litellm[proxy]>=1.43.0",
  "pypdfium2>=4.30.0",
  "Pillow>=10.3.0",
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
docx = [
  "docx2pdf>=0.1.8",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.6",
  "pre-commit>=3.6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.6",
  "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/sethupavan12/Markdownify"
Repository = "https://github.com/sethupavan12/Markdownify"
Issues = "https://github.com/sethupavan12/Markdownify/issues"

[project.scripts]
markdownify = "llm_markdownify.cli:app"

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/llm_markdownify"]

[tool.hatch.build]
include = [
  "src/llm_markdownify/**",
  "README.md",
  "LICENSE",
  "NOTICE",
]
